# colab_notebooks

./: .gitignore  README.md  main.py  parse_wa_chat.py  pyproject.toml
nb/: Llama3.2_(1B_and_3B)-Conversational.ipynb
src/data_preparation/: data_prep.py
src/finetuning_notebook/: finetuning_llama.ipynb
