[project]
name = "finetuning-data-preparation"
version = "0.1.0"
description = "Parses your whatsapp chats to be finetuning ready"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "questionary>=2.1.1",
]

[project.scripts]
parse_conv = "data_preparation.data_prep:parse_conversations"


[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data_preparation"]

[tool.setuptools.package-dir]
"" = "src"
